# lexicom

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
task_1/: __main__.py  conf.yaml  controller.py  main.py  router.py  schemas.py
task_1/core/: constants.py  controller.py  dependencies.py  exceptions.py  redis.py  settings.py
task_2/: python_2_option.py  sql_1_option.sql
